lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:29: error: value <=- is not a member of Double
		else if(getVitesseX()<=-3)
                                     ^